# qrl

./: .gitignore  README.md  pyproject.toml
cheating_algo/: create_configs.py  load_config.py  logger.py  main.py  optimizer.py  solve_matrix_form.py  train.py  visualize.py  weight_init.py
cheating_algo/configs/: config.txt  default_config.txt  exp_config.txt
cheating_algo/interesting_results/: .gitignore
dequantized/: ccnot.py  controlled_unitaries.py  logger.py  main.py  train.py  utils.py  wire_utils.py
dequantized/configs/: 2x2_config.json  2x2_config.txt
dequantized/environment/: __init__.py  frozen_lake.py
dequantized/load_data/: __init__.py  little_tree_loader.py  quantum_associative_memory.py  tree_loader.py
dequantized/loss_function/: __init__.py
dequantized/qnns/: __init__.py  table_like_qnns.py
dequantized/visualize/: __init__.py  action_value_info.py  rot_swap_value.py
fourier_stuff/: bar_plot.py  fourier_stuff.py  plot.py
max_policy/: max_policy.py  plot.py  true_z.npy
pennylane_general/: ccnot.py  debug_utils.py  main.py  q_arithmetic.py  quantum_backends.py  simple_oracle.py  train.py
pennylane_implementation/: ccnot.py  controlled_unitaries.py  debug_utils.py  frozen_lake.py  little_tree_loader.py  load_config.py  loss.py  main.py  main.py.save  old_main.py  optimizer.py  q_arithmetic.py  qnns.py  quantum_backends.py  simple_oracle.py  test_frozen_lake.py  test_little_treeloader.py  test_main.py  train.py  utils.py  visualize.py  visualize_action_loss.py  visualize_gradient_loss.py  wire_utils.py
(+655 files in other folders)
